[tool.poetry]
name = "cp2xlsx"
version = "0.1.0"
description = "Convert Check Point exported policy package into xlsx document."
authors = ["Alexander Bodrukhin <bodrukhinaa@sibintek.ru>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
xlsxwriter = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pylint = "*"
pyinstaller = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
